<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Registro"
    android:background="@color/celeste">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blanco"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="121dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="261dp"
                    android:layout_height="28dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/titreg"
                    android:textColor="#A29A98"
                    android:textSize="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="101dp"
                    android:layout_height="85dp"
                    android:layout_marginTop="32dp"
                    android:rotationX="37"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.464"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_bender" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:hint="@string/nom"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtnombre"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:hint="@string/ape"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtapellidos"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn_fecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="IngresarFecha"
                        android:text="@string/n_f"
                        android:textColorHighlight="#CC2121"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.065"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/txtfechaN"
                        android:layout_width="168dp"
                        android:layout_height="40dp"
                        android:textSize="15dp"
                        android:gravity="center"
                        android:layout_marginStart="70dp"
                        android:hint="@string/fechaN"
                        android:enabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.76"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.523" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/gmail"
                    android:inputType="textEmailAddress"
                    app:errorEnabled="true"
                    app:errorIconDrawable="@null"
                    android:paddingBottom="0dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:endIconDrawable="@drawable/ic_email"
                    app:endIconMode="custom"
                    app:helperText="@string/mc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtcorreo"
                        android:layout_width="match_parent"
                        android:layout_height="62dp"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Rpassword"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:paddingTop="5dp"

                    app:counterEnabled="true"
                    app:counterMaxLength="14"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/cc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtLcontrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textAllCaps="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Reppassword"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    android:paddingTop="5dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="14"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/cc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtcontrasenarep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/terminos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terminos">

                </CheckBox>
            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="128dp">


                <Button
                    android:id="@+id/btnregistrar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="193dp"
                    android:layout_height="46dp"
                    android:onClick="Btnregistrar"
                    android:rotationX="33"
                    android:rotationY="0"
                    android:text="@string/registrar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.118" />

                <Button
                    android:id="@+id/btnRiniciarsesion"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="130dp"
                    android:layout_height="36dp"
                    android:rotationX="33"
                    android:text="@string/btnlogin"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.973"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.793" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="211dp"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:text="@string/smslogin"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnRiniciarsesion"
                    app:layout_constraintHorizontal_bias="0.21"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.795" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

</ScrollView>