<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/celeste"
    android:padding="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:background="@color/blanco"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="354dp"
            android:layout_height="228dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="347dp"
                android:layout_height="52dp"
                android:layout_marginTop="28dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/titulo"
                android:textColor="#FF70DFFF"
                android:textSize="20dp"
                android:textStyle="normal|bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="198dp"
                android:layout_height="162dp"
                android:layout_marginTop="56dp"
                android:rotationX="37"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_login"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="427dp"
        android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconMode="custom"
                app:helperText="@string/mc">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtusuario"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="10dp"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:helperText="@string/cc"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtLcontrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="127dp">

                <Button
                    android:id="@+id/btniniciarsesion"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="193dp"
                    android:layout_height="46dp"
                    android:onClick="Btniniciarsesion"
                    android:rotationX="33"
                    android:rotationY="0"
                    android:text="@string/login"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.156" />

                <Button
                    android:id="@+id/btnRregistrar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="125dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="64dp"
                    android:rotationX="33"
                    android:text="@string/Rregistrar"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.826" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="196dp"
                    android:layout_height="26dp"
                    android:gravity="center|center_horizontal"
                    android:text="@string/smsRegistrar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.012"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.742" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <ImageButton
                    android:id="@+id/instagram"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="30dp"
                    app:srcCompat="@drawable/ic_instagram" />

                <ImageButton
                    android:id="@+id/facebook"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="30dp"
                    app:srcCompat="@drawable/ic_facebook" />

                <ImageButton
                    android:id="@+id/twitter"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    app:srcCompat="@drawable/ic_twitter" />

                <ImageButton
                    android:id="@+id/btncrear"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="20dp"
                    app:srcCompat="@drawable/ic_google" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    </LinearLayout>



























