<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D0FFFFFF"
    android:backgroundTint="@color/celeste"
    android:padding="10sp"
    tools:context=".ResultadoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D0FFFFFF">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#009A8B8B"
            android:backgroundTint="#F1EEEE"
            android:rotationX="29"
            android:text="@string/Gracias"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="358dp"
            android:layout_height="134dp"
            android:fontFamily="casual"
            android:text="@string/Reseva"
            android:textAlignment="center"
            android:textColor="@color/azul"
            android:textColorLink="@color/blanco"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.463" />

        <Button
            android:id="@+id/btnvolverH"
            android:layout_width="185dp"
            android:layout_height="67dp"
            android:backgroundTint="#4eabff"
            android:rotationX="29"
            android:text="@string/Volver"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.789" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>