<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SepararActivity">

    <EditText
        android:id="@+id/simple2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/simple"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:editable="false"
        android:hint="@string/simple2"
        app:startIconDrawable="@drawable/ic_puerta" />

    <Button
        android:id="@+id/bfecha2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bfecha"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Fecha de Salida     "
        android:textAlignment="center"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="Reserva de Habitaciones"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:editable="true"
        android:enabled="false"
        android:text="Tipo de Habitación"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/itemPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="Tipo de Habitación"
        android:textSize="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/menu_drop"
        android:layout_below="@id/itemSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:startIconDrawable="@drawable/ic_puerta"
        android:hint="Seleccione una Opciòn"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/drop_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Seleccione una Opciòn"
            android:inputType="none" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bfecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_drop"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Fecha de Ingreso
"
        android:textSize="10dp" />

    <EditText
        android:id="@+id/simple"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu_drop"
        android:layout_marginStart="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:editable="false"
        android:hint="@string/simple" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numcuenta"
        android:layout_below="@id/bfecha2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_tarjeta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtcuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtcuenta"
            android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btncancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="27dp"
        android:text="cancelar" />
    <Button
        android:id="@+id/btnconfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="248dp"
        android:layout_marginBottom="27dp"
        android:onClick="Registrar"
        android:text="@string/button" />


</RelativeLayout>